--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Carbonara", "Saad", "Sabahuddin", "shinpad"]
+  "cSpell.words": ["Carbonara", "Hamzah", "Saad", "Sabahuddin", "shinpad"]
 }
