--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["Carbonara", "Hamzah", "Saad", "Sabahuddin", "shinpad"]
+  "cSpell.words": [
+    "Abraar",
+    "Beiber",
+    "Carbonara",
+    "Hamzah",
+    "Laroi",
+    "Puth",
+    "Saad",
+    "Sabahuddin",
+    "shinpad",
+    "Zayn"
+  ]
 }
